[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/credits.gd" type="Script" id=1]
[ext_resource path="res://sprites/title/made_for.png" type="Texture" id=2]
[ext_resource path="res://sprites/title/made_for/frame_0_delay-0.11s.png" type="Texture" id=3]
[ext_resource path="res://sprites/title/made_for/frame_1_delay-0.11s.png" type="Texture" id=4]
[ext_resource path="res://sprites/title/made_for/frame_2_delay-0.11s.png" type="Texture" id=5]
[ext_resource path="res://sprites/title/made_for/frame_3_delay-0.11s.png" type="Texture" id=6]
[ext_resource path="res://sprites/title/made_for/frame_4_delay-0.11s.png" type="Texture" id=7]
[ext_resource path="res://sprites/title/made_for/frame_5_delay-0.11s.png" type="Texture" id=8]
[ext_resource path="res://sprites/title/made_for/frame_6_delay-0.11s.png" type="Texture" id=9]
[ext_resource path="res://sprites/title/made_for/frame_7_delay-0.11s.png" type="Texture" id=10]
[ext_resource path="res://sprites/title/made_for/frame_8_delay-0.11s.png" type="Texture" id=11]
[ext_resource path="res://sprites/title/credits.png" type="Texture" id=12]
[ext_resource path="res://sprites/title/credits_prompt.png" type="Texture" id=13]
[ext_resource path="res://music/themes/Victory - Credits.ogg" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[node name="credits" type="Node2D"]
script = ExtResource( 1 )

[node name="made_for" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )

[node name="two_button" type="AnimatedSprite" parent="."]
position = Vector2( 512, 352 )
scale = Vector2( 1.14, 1.14 )
frames = SubResource( 1 )
playing = true

[node name="credits" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
texture = ExtResource( 12 )

[node name="prompt" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 300 )
texture = ExtResource( 13 )

[node name="credits_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="made_time" type="Timer" parent="."]

[node name="credits_time" type="Timer" parent="."]

[connection signal="timeout" from="made_time" to="." method="_on_made_time_timeout"]
[connection signal="timeout" from="credits_time" to="." method="_on_credits_time_timeout"]
